2008-04-23 Holger Vogt
 * src/frontend/inpcom.c: In inp_fix_param_values() xspice variables of type 
   complex are recognized. Vectors of complex variables still missing.
   
2008-04-20 Holger Vogt
 * src/frontend/inpcom.c: .cmodel added for xspice compatibility:
   inp_fix_param_values() replaces .cmodel with .model and then skips entire
   line, thus no numparam search and setting of {} will happen.

2008-04-20 Dietmar Warning
 * src/spicelib/devices/bsim*/b*ld.c, src/math/ni/niconv.c: Reconstruct NEWCONV
   macro for better bsim3,4,soi transfer from Berkeley, macro is defined by
   default in spice3f4 which is used by UCB for testing. Now same behaviour in ngspice
   - tested and should not impact convergence behaviour.
 * src/frontend/winprint.c: pragmas only for MSC.
 * configure.in tests/Makefile.am, tests/bsim3soi/*.cir, *.out, *.mod: new testcase 
   for bsim3soi (origin UCB small modifications).

2008-04-19 Holger Vogt
 * src/frontend/inpcom.c: inp_fix_param_values(): retain ..=true as boolean,
   retain ="xxx" as string, allow numparams without {} inside xpsice input vectors

2008-04-16 Dietmar Warning
 * src/spicelib/devices/bsim3soi/*.c,*.h, src/spicelib/parser/inpdomod.c, inp2m.c,
   src/spicelib/devices/dev.c, DEVICES: New bsim3soi version 4.0
 * src/include/macros.h: redefine NEWCONV because we are using Berkeley spice3f4 code 
   for bsim models.

2008-04-13 Holger Vogt
 * src/frontend/inpcom.c: get_number_terminals(): support for cpl lines,
   inp_readall(): debug ouput of input data after processing
   inp_fix_param_values(): CIDER models excluded from getting {}, xspice
   model vectors [] excluded from getting {}
 * src/winmain.c: larger text buffer, MakeArgcArgv() allows multiple spaces
   between arguments, allows CYGWIN handling, winmessage() for error messages
 * src/main.c: temporary file for Windows non admin users, printed info independent
   from sequence of options
 * src/include/bool.h: BOOLEAN definition added again  